一旦コミット

--- a/index2.ini
+++ b/index2.ini
@@ -1,30 +1,117 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>魔法と物理の計算</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js"></script>
     <style>
-        .container {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr; /* 3つの列を均等に分割 */
-            gap: 10px; /* グリッド間の余白 */
+        /* タブボタンのスタイル */
+        .tab-button {
+            display: inline-block;
+            padding: 10px;
+            background-color: #f0f0f0;
+            cursor: pointer;
         }
-        .left {
-            grid-column: 1; /* 左領域 */
+        /* フォームのスタイル */
+        .form-container {
+            display: flex;
         }
-        .center {
-            grid-column: 2; /* 中央領域 */
+        .form-container .form-column {
+            flex-basis:25%;
+            flex: 1;
+            padding: 20px;
         }
-        .right {
-            grid-column: 3; /* 右領域 */
+        .form-container h2 {
+            margin-bottom: 10px;
+        }
+        .form-container input[type="text"] {
+            width: 100%;
+            padding: 5px;
+            margin-bottom: 10px;
+        }
+        .form-withoutEle {
+            flex-basis:25%;
+        }
+        .form-withEle {
+            flex-basis:25%;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="left">左</div>
-        <div class="center">中央</div>
-        <div class="right">右</div>
+    <!-- タブボタン -->
+    <div class="tab-button" onclick="showTab('magic')">魔法計算</div>
+    <div class="tab-button" onclick="showTab('physics')">物理計算</div>
+
+    <!-- フォーム -->
+    <div class="form-container">
+        <!-- 魔法計算フォーム -->
+        <div id="magic" class="form-column" style="display: block;">
+            <h2>魔法計算</h2>
+            <p>知識: <input type="text" placeholder="知識を入力してください"></p>
+            <p>スキルLv: <input type="text" placeholder="スキルLvを入力してください"></p>
+            <p>強化値: <input type="text" placeholder="強化値を入力してください"></p>
+            <p>弱化値: <input type="text" placeholder="弱化値を入力してください"></p>
+            <button onclick="calculateMagic()">計算</button>
+        </div>
+
+        <!-- 物理計算フォーム -->
+        <div id="physics" class="form-column" style="display: none;">
+            <h2>物理計算</h2>
+            <p>知識: <input type="text" placeholder="知識を入力してください"></p>
+            <p>スキルLv: <input type="text" placeholder="スキルLvを入力してください"></p>
+            <p>強化値: <input type="text" placeholder="強化値を入力してください"></p>
+            <p>弱化値: <input type="text" placeholder="弱化値を入力してください"></p>
+            <button onclick="calculatePhysics()">計算</button>
+        </div>
+
+        <div class="form-withoutEle">
+            <canvas id="scatterChart"></canvas>
+        </div>
+
+        <div class="form-withEle">
+            <canvas id="scatterChart"></canvas>
+        </div>
     </div>
+
+
+    <script>
+        // タブ切り替え
+        function showTab(tabName) {
+            const tabs = document.querySelectorAll('.form-column');
+            tabs.forEach(tab => {
+                tab.style.display = 'none';
+            });
+            document.getElementById(tabName).style.display = 'block';
+        }
+
+        // 魔法計算の処理
+        function calculateMagic() {
+            // ここに魔法計算のロジックを追加
+        }
+
+        // 物理計算の処理
+        function calculatePhysics() {
+            // ここに物理計算のロジックを追加
+        }
+
+                // ファイルを読み込んで散布図を表示する部分のコードを追加します
+        // 散布図を作成
+        const ctx = document.getElementById('scatterChart');
+        const myChart = new Chart(ctx, {
+            type: 'scatter',
+            data: {
+                datasets: [{
+                    data: [ // x, yのデータを入力
+                        { x: 1, y: 2 },
+                        { x: 2, y: 3 },
+                        { x: 3, y: 4 },
+                        { x: 4, y: 5 }
+                    ],
+                }],
+            },
+            options: {
+                // グラフの設定（必要に応じてカスタマイズ）
+            },
+        });
+    </script>
 </body>
 </html>
